<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".agregarCurso">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/fredokaone"
        android:text="@string/txtAgregar"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="384dp"
        android:layout_height="588dp"
        app:cardBackgroundColor="#C4C4C4"
        app:cardCornerRadius="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.110000014">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="605dp"
            android:layout_marginBottom="200dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="93dp"
                android:layout_height="66dp"
                android:layout_marginTop="20dp"
                android:contentDescription="TODO"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/libro__2_" />


            <EditText
                android:id="@+id/txtnombreActualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="@font/fredokaone"
                android:inputType="textPersonName"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.172"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/fredokaone"
                android:text="@string/nombrecurso"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.142"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/fredokaone"
                android:text="@string/grupo"
                android:textColor="#090909"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.095"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtnombreActualizar" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/fredokaone"
                android:text="@string/dia"
                android:textColor="#070707"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.133"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtgrupoActualizar" />

            <EditText
                android:id="@+id/txtdiaActualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:fontFamily="@font/fredokaone"
                android:inputType="textPersonName"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.174"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/fredokaone"
                android:text="@string/hora"
                android:textColor="#000000"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.092"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtdiaActualizar" />


            <EditText
                android:id="@+id/txthoraActualizar"
                android:layout_width="126dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:fontFamily="@font/fredokaone"
                android:inputType="time"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.112"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textoaula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/fredokaone"
                android:text="@string/aula"
                android:textColor="#020202"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.089"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txthoraActualizar" />

            <EditText
                android:id="@+id/txtaulaActualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:fontFamily="@font/fredokaone"
                android:inputType="textPersonName"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.164"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textoaula"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/fredokaone"
                android:text="@string/docente"
                android:textColor="#000000"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.104"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtaulaActualizar" />

            <EditText
                android:id="@+id/txtdocenteActualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="@font/fredokaone"
                android:inputType="textPersonName"
                android:textSize="18dp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.174"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txtgrupoActualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/fredokaone"
                android:inputType="textPersonName"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.17"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btnHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="364dp"
                android:layout_marginEnd="132dp"
                android:fontFamily="@font/fredokaone"
                android:text="Hora"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnAgregaroCurso"
        android:layout_width="168dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnagregar"
        android:textSize="18dp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


</androidx.constraintlayout.widget.ConstraintLayout>