<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".agregarActividad">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/fredokaone"
        android:text="@string/txtagregaractividad"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="384dp"
        android:layout_height="588dp"

        app:cardBackgroundColor="#C4C4C4"
        app:cardCornerRadius="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.110000014">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="605dp"
            android:layout_marginBottom="200dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="318dp"
                android:layout_height="126dp"
                android:layout_marginTop="48dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg2">

                    <TextView
                        android:id="@+id/nombreAgregarActividad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:fontFamily="@font/fredokaone"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="87dp"
                android:layout_height="85dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/diario__2_" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="104dp"
                android:fontFamily="@font/fredokaone"
                android:text="@string/txtcurso"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.048"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/fredokaone"
                android:text="@string/descripcionActividad"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.063"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView4" />

            <EditText
                android:id="@+id/txtdescripcionactividad"
                android:layout_width="347dp"
                android:layout_height="95dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/fechadeentraga"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.077"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtdescripcionactividad" />

            <EditText
                android:id="@+id/txtfecha"
                android:layout_width="161dp"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="@font/fredokaone"
                android:inputType="textPersonName"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnfecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="56dp"
                android:fontFamily="@font/fredokaone"
                android:text="Fecha"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtdescripcionactividad" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnactualizar"
        android:layout_width="168dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnagregar"
        android:textSize="18dp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


</androidx.constraintlayout.widget.ConstraintLayout>